# allo4ka

./: .dockerignore  .env.example  .env_example  .gitignore  Dockerfile  DockerfilePython  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  run_admin.py  run_bots.py  textgen.py  voice.py
alembic/: env.py
alembic/versions/: 20260318_0001_initial_schema_and_seed.py  20260319_0002_trigger_response_links_and_profanity.py  20260319_0003_pregenerated_replies.py  20260319_0004_drop_pregenerated_text_replies.py
app/: __init__.py  config.py  db.py  models.py
app/api/: admin.py
app/bots/: telegram_bot.py  vk_bot.py
app/services/: message_router.py  pre_generation.py  profanity_filter.py  response_builder.py  tts.py
app/tasks/: celery_app.py  jobs.py
app/web/: admin.html  app.js  login.html  styles.css
src/: config.py  enums.py  schemas.py  service.py
src/api/: dependencies.py
src/bot/: bot.py  my_bot.py  overrides.py
src/tasks/: tasks.py
