[tool.poetry]
name = "allo4ka"
version = "0.2.0"
description = "funny VK chat bot with some api to manage it"
authors = ["aenternal <kotikote875@gmail.com>"]
license = "No"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
redis = "^5.0.0"
celery = "^5.3.4"
vkbottle = "^4.3.12"
uvicorn = "^0.23.2"
torch = ">=2.0.0, !=2.0.1"
markovify = "^0.9.4"
setuptools = "^68.2.0"
python-dotenv = "^1.0.0"
silero = "^0.4.1"
pytest = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
