[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "allo4ka"
version = "2.0.0"
description = "Multiplatform moderation bot for VK and Telegram"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "celery>=5.4",
  "vkbottle>=4.4",
  "aiogram>=3.10",
]

[tool.setuptools]
packages = ["app", "app.api", "app.bots", "app.tasks", "app.services"]
